<resources>
    <string name="app_name">ToDoList</string>


    <!-- Text Input Layout -->
    <string name="til_name">Name</string>
    <string name="til_phone">Phone Number</string>
    <string name="til_email">Email</string>
    <string name="til_password">Password</string>
    <string name="til_confirm_password">Confirm Password</string>
    <string name="til_title">Tittle</string>
    <string name="til_desc">Description</string>
    <string name="til_do_date">Date</string>
    <string name="til_reminder">Reminder</string>
    <string name="til_status">Status</string>
    <string name="til_file">Upload File</string>

    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_save">Save</string>
    <string name="btn_upload">Upload</string>


    <string name="text_regis">Dont have an account? \u003F</string>
    <string name="text_to_regis">Create new account</string>


    <!-- Menu -->
    <string name="tittle_menu_home">Home</string>
    <string name="tittle_menu_gallery">Gallery</string>
    <string name="tittle_menu_task">Task</string>
    <string name="tittle_menu_profile">Profile</string>


    <!-- Text Input -->
    <string name="text_todo">To Do</string>
    <string name="text_progress">In Progress</string>
    <string name="text_done">Done</string>
    <string name="text_see_all">See All</string>
    <string name="text_title">Title</string>
    <string name="text_desc">Description</string>
    <string name="text_date">Date</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_status">Status</string>
    <string name="text_file">File</string>

    <!-- Text Helper -->
    <string name="text_error_invalid_email">Invalid email address</string>
    <string name="text_error_empty_field">This field is empty</string>
    <string name="text_error_short_pass">Password below 8 characters</string>
    <string name="text_error_pass_regex_not_match">Password not contain number or alphabet or too short</string>
    <string name="text_error_pass_not_match">Password not match</string>
    <string name="text_error_name_to_short">Use name with at least 3 characters</string>
    <string name="text_error_phone_field">Phone length must be at least 9 characters</string>

    <!-- Text Input -->
    <string name="text_ask_logout">Are you sure?</string>

    <string name="text_cancel">Cancel</string>
    <string name="text_logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>